--- a/src/app/components/auth-session/auth-admin/signup/signup.component.html
+++ b/src/app/components/auth-session/auth-admin/signup/signup.component.html
@@ -62,7 +62,7 @@
                 id="username"
                 type="text"
                 placeholder="Username"
-                formControlName="username"
+                formControlName="userName"
               />
             </div>
             <div class="mb-6 mt-6">
@@ -90,7 +90,7 @@
               <button
                 class="w-full bg-gray-800 hover:bg-grey-900 text-white text-sm py-2 px-4 font-semibold rounded focus:outline-none focus:shadow-outline h-10"
                 type="submit"
-                
+                [routerLink]="['/adminhome']"
               >
                 Registrar
               </button>
