--- a/src/app/components/auth-session/auth-admin/signup/signup.component.html
+++ b/src/app/components/auth-session/auth-admin/signup/signup.component.html
@@ -69,8 +69,7 @@
               <label class="block text-gray-700 text-sm font-semibold mb-2" for="tipo"> Tipo Administrador </label>
               <select class="text-sm appearance-none rounded w-full py-2 px-3 text-gray-700 bg-gray-100 leading-tight focus:outline-none focus:shadow-outline h-10" 
                 id="browsers" 
-                placeholder="Tipo Administrador"
-                formControlName="tipoAdministradorId">
+                placeholder="Tipo Administrador">
                     <option value="1" type="number">Administrador del sistema</option>
                     <option value="2" type="number">Proveedor</option>
               </select>
